<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Conspiracy Squares</string>
    <string name="text_title">Conspiracy Squares</string>
    <string name="input_name">Enter Name:</string>
    <string name="input_name_def">Unnamed</string>
    <string name="input_name_error">Please enter a name!</string>
    <string name="input_server">Enter Server Name</string>
    <string name="input_password">Password; Leave blank for public</string>
    <string name="input_password_join">Enter Server Password</string>
    <string name="toast_wrong_password">Wrong Password!</string>
    <string name="toast_server_full">This Server is Full!</string>
    <string name="toast_connection_error">A Connection Error Has Occurred!</string>
    <string name="toast_server_noauto">Server connection timed out! Try joining again.</string>
    <string name="button_play">Play</string>
    <string name="button_server">Find Server</string>
    <string name="button_host">Start Server</string>
    <string name="button_join">Join Server</string>
    <string name="button_back">Back</string>
    <string name="button_refresh">Refresh</string>
    <string name="title_host">Create Cloud Server</string>
    <string name="title_join">Join Server</string>
    <string name="title_popup">Warning!</string>
    <string name="txt_Servers">Servers</string>
    <string name="txt_Players">Players</string>
    <string name="credits">Credits</string>
    <string name="credits_design">Gameplay Design and Art:</string>
    <string name="credits_design_dev">Michael Persin\nFrom: Chainlink Productions</string>
    <string name="credits_design_dev_wide">Michael Persin, From: Chainlink Productions</string>
    <string name="credits_app">Application Development:</string>
    <string name="credits_app_dev">Daniel Dunevant\nJesse Primiani\nFrom: Novay Technologies LLC</string>
    <string name="credits_app_dev_wide">Daniel Dunevant &amp; Jesse Primiani, From: Novay Technologies LLC</string>
    <string name="credits_music">Soundtrack Composer:</string>
    <string name="credits_music_dev">Nicaris Daniels-Porter</string>
    <string name="blank" />
</resources>
