<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ID_dialog_join"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/none"
    android:background="@color/colorBackground2"
    android:gravity="center"
    android:padding="@dimen/none">

    <TextView
        android:id="@+id/ID_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/none"
        android:background="@color/colorButton"
        android:gravity="center"
        android:padding="@dimen/button_padding"
        android:text="@string/title_join"
        android:textColor="@color/colorButtonText"
        android:textSize="@dimen/title_text"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dialog_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ID_dialog_title"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/colorBackground2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/none"
        android:weightSum="1">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/button_padding"
            android:background="@drawable/menu_input"
            android:ems="12"
            android:hint="@string/input_password_join"
            android:inputType="textVisiblePassword"
            android:nextFocusLeft="@id/dialog_main"
            android:nextFocusUp="@id/dialog_main"
            android:drawableLeft="@drawable/vec_lock"
            android:drawableStart="@drawable/vec_lock"
            android:drawablePadding="@dimen/input_padding"
            android:padding="@dimen/input_padding"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/colorInput"
            android:textColorHighlight="@color/colorInputHighlight"
            android:textSize="@dimen/input_text"
            android:windowSoftInputMode="stateHidden" />

        <LinearLayout
            android:id="@+id/dialog_main_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/none"
            android:background="@color/colorBackground2"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:padding="@dimen/none"
            android:weightSum="2">

            <Button
                android:id="@+id/ID_dialog_button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="1"
                android:background="@drawable/menu_button"
                android:padding="@dimen/button_padding"
                android:text="@string/button_back"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/button_text" />

            <Button
                android:id="@+id/ID_dialog_button_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/button_margin"
                android:layout_weight="1"
                android:background="@drawable/menu_button"
                android:padding="@dimen/button_padding"
                android:text="@string/button_join"
                android:textColor="@color/colorButtonText"
                android:textSize="@dimen/button_text" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>